--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" data-theme="sunset">
 	<head>
-		<title>Website</title>
+		<title>FRONTIER LAUNCH</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
