--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en" data-theme="sunset">
+<html lang="en" data-theme="retro">
 	<head>
 		<title>FRONTIER LAUNCH</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
